# praxis

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml  coverage.yml  publish.yml  security.yml
crates/praxis/: Cargo.toml  README.md
crates/praxis-checks/: Cargo.toml  README.md
crates/praxis-checks/src/: ac.rs  cpi.rs  fd.rs  lib.rs  t22.rs  types.rs
crates/praxis-cli/: Cargo.toml  README.md  default_praxis.toml
crates/praxis-cli/src/: main.rs
crates/praxis-core/: Cargo.toml  README.md
crates/praxis-core/src/: idl.rs  lib.rs  mock.rs  svm.rs
crates/praxis-fuzz/: Cargo.toml  README.md
crates/praxis-fuzz/src/: ctx.rs  engine.rs  error.rs  finding.rs  lib.rs
crates/praxis-gen/: Cargo.toml  README.md
crates/praxis-gen/src/: account.rs  lib.rs  mutation.rs  rng.rs  shrink.rs  tx.rs
crates/praxis-idl/: Cargo.toml  README.md
crates/praxis-idl/src/: anchor.rs  error.rs  lib.rs
crates/praxis-macros/: Cargo.toml  README.md
crates/praxis-macros/src/: lib.rs
crates/praxis-profile/: Cargo.toml  README.md
crates/praxis-profile/src/: diff.rs  error.rs  flame.rs  lib.rs  report.rs
crates/praxis-report/: Cargo.toml  README.md
crates/praxis-report/src/: builder.rs  lib.rs  markdown.rs
crates/praxis-svm-litesvm/: Cargo.toml  README.md
crates/praxis-svm-litesvm/src/: lib.rs
crates/praxis-svm-mollusk/: Cargo.toml  README.md
crates/praxis-svm-mollusk/src/: lib.rs
crates/praxis-svm-surfpool/: Cargo.toml  README.md
crates/praxis-svm-surfpool/src/: lib.rs
crates/praxis/src/: lib.rs
docs/: architecture.md  check-pack-reference.md  report-schema.json  writing-invariants.md
examples/amm-pinocchio/: Cargo.toml
examples/amm-pinocchio/src/: error.rs  instructions.rs  lib.rs  state.rs
examples/escrow-anchor/: Cargo.toml
examples/escrow-anchor/src/: lib.rs
examples/token-2022-hook/: Cargo.toml
examples/token-2022-hook/src/: error.rs  execute.rs  initialize.rs  lib.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: escrow.rs
tests/regression/: Cargo.toml
tests/regression/src/: lib.rs
tests/regression/tests/: corpus.rs
