[package]
name = "praxis-checks"
description = "FD/T-2022/AC check pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { path = "../praxis-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-sdk.workspace = true
