[package]
name = "e-okelloh-praxis-checks"
description = "FD/T-2022/AC check pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { package = "e-okelloh-praxis-core", path = "../praxis-core", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-sdk.workspace = true
