[package]
name = "praxis-cli"
description = "Praxis CLI — Solana program testing, fuzzing, and auditing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "praxis"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
praxis-profile = { path = "../praxis-profile" }
praxis-checks  = { path = "../praxis-checks" }
praxis-idl     = { path = "../praxis-idl" }
praxis-report  = { path = "../praxis-report" }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
