[package]
name = "praxis-fuzz"
description = "Invariant fuzzer engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
praxis-core = { path = "../praxis-core" }
praxis-gen = { path = "../praxis-gen" }
solana-sdk.workspace = true
proptest.workspace = true
