[package]
name = "praxis-gen"
description = "Adversarial account generators and mutation strategies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { path = "../praxis-core" }
solana-sdk.workspace = true
