[package]
name = "e-okelloh-praxis-profile"
description = "CU profiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { package = "e-okelloh-praxis-core", path = "../praxis-core", version = "0.1.0" }
inferno = "0.12.6"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
