[package]
name = "praxis-report"
description = "Markdown and JSON report generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
praxis-core    = { path = "../praxis-core" }
praxis-checks  = { path = "../praxis-checks" }
praxis-fuzz    = { path = "../praxis-fuzz" }
praxis-profile = { path = "../praxis-profile" }
