[package]
name = "e-okelloh-praxis-report"
description = "Markdown and JSON report generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
praxis-core    = { package = "e-okelloh-praxis-core",    path = "../praxis-core",    version = "0.1.0" }
praxis-checks  = { package = "e-okelloh-praxis-checks",  path = "../praxis-checks",  version = "0.1.0" }
praxis-fuzz    = { package = "e-okelloh-praxis-fuzz",    path = "../praxis-fuzz",    version = "0.1.0" }
praxis-profile = { package = "e-okelloh-praxis-profile", path = "../praxis-profile", version = "0.1.0" }
