[package]
name = "e-okelloh-praxis-svm-litesvm"
description = "LiteSVM backend for the Praxis Svm trait"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { package = "e-okelloh-praxis-core", path = "../praxis-core", version = "0.1.0" }
litesvm = "0.7"
solana-sdk.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
