[package]
name = "praxis-svm-mollusk"
description = "Mollusk backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core = { path = "../praxis-core" }
praxis-svm-litesvm = { path = "../praxis-svm-litesvm" }
solana-sdk.workspace = true
