[package]
name = "e-okelloh-praxis-svm-surfpool"
description = "Surfpool backend (mainnet-fork)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
praxis-core        = { package = "e-okelloh-praxis-core",        path = "../praxis-core",        version = "0.1.0" }
praxis-svm-litesvm = { package = "e-okelloh-praxis-svm-litesvm", path = "../praxis-svm-litesvm", version = "0.1.0" }
solana-sdk.workspace = true
serde_json.workspace = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[features]
mainnet-fork = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
