[package]
name = "praxis-e2e"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# Not published — integration test harness only.
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
praxis-svm-litesvm = { package = "e-okelloh-praxis-svm-litesvm", path = "../../crates/praxis-svm-litesvm" }
praxis-core        = { package = "e-okelloh-praxis-core",        path = "../../crates/praxis-core" }
solana-sdk         = "2"
